added the footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <h1>
         Welcome to the AI English Poem Generator
     </h1>
+
+        <footer>
+            This was coded by 
+            <a href="https://github.com/ImmaculateMchunu/ImmaculateMchunu.git" target="_blank"></a>
+              ImmaculateMchunu
+
+             <a href=" https://github.com/ImmaculateMchunu/English-Poem-Generator.git"
+              target="_blank"
+              >
+            open-sourced on Github </a
+            > and is <a href="https://ai-english-poem-generator-immac.netlify.app/" target="_blank"> on Netlify. </a>
+
+        </footer>
+        
+    </h1>
     <script src="src/index.js"></script>
 </body>
 </html>
