--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <title>AI Poeme Generatort</title>
 </head>
 <body>
+    <header>
     <h1>
         Welcome to the AI English Poem Generator
     </h1>
+    </header>
+
+    <main>
+        <form>
+            <input type="text" placeholder="Enter the topic of the English poem" />
+            <input type="submit"  />
+        </form>
+    </main>
 
         <footer>
             This was coded by 
