Added basic structure on HTML

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
 
     <main>
         <form>
-            <input type="text" placeholder="Enter the topic of the English poem" />
-            <input type="submit"  />
+            <input type="text" placeholder="Enter the topic of the English poem"
+            autofocus
+            required
+            autocomplete="off" />
+            <input type="submit" />
         </form>
+        <div>
+            The poem will go here
+            <br />
+            The poem will go here
+        </div>
     </main>
 
         <footer>
