added basic form handling and typewriter plugin

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
     <title>AI Poeme Generatort</title>
@@ -15,7 +16,7 @@
     </header>
 
     <main>
-        <form>
+        <form class="poem-generator-form">
             <input type="text" placeholder="Enter the topic of the English poem"
             autofocus
             required
@@ -24,10 +25,10 @@
             />
             <input type="submit" class="submit-button" />
         </form>
-        <div class="poem">
-            The poem will go here
+        <div class="poem" id="poem">
+           
             <br />
-            The poem will go here
+
         </div>
     </main>
 
