--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
 
     <main>
+        <div class="form-container">
         <form class="poem-generator-form">
             <input type="text" placeholder="Enter the topic of the English poem"
             autofocus
@@ -26,8 +27,10 @@
             id="user-instructions"
             />
             <input type="submit" class="submit-button" />
+        <div class="hint">i.e: strong women, mother, women </div>
         </form>
-        <div class="poem" id="poem">
+        </div>
+        <div class="poem hidden" id="poem">
            
             <br />
 
